<resources>
    <string name="app_name">CourseWork</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Login</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tempreture">tempreture</string>
    <string name="pressure">pressure</string>
    <string name="description">description</string>
    <string name="wind_speed">wind speed</string>
    <string name="get">GET</string>
    <string name="city_name">City Name</string>
    <string name="humidity">humidity</string>
    <string name="country">country</string>
    <string name="wind">wind and deg</string>
    <string name="update_time">update time</string>
    <string name="sunrise">sunrise</string>
    <string name="sunset">sunset</string>
    <string name="clounds">clounds</string>
    <string name="forecast">Forecast</string>
    <string name="current">Current</string>
    <string name="stations">Stations</string>
    <string name="title_activity_my_stations">MyStationsActivity</string>
    <string name="tab_text_1">Registration</string>
    <string name="tab_text_2">Send data</string>
    <string name="external_id">External Id</string>
    <string name="name_station">Name Station</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="registrate_station">Registrate Station</string>
    <string name="station_id">station_id</string>
    <string name="wind_gust">wind gust</string>
    <string name="rain_per_hour">rain per hour</string>
    <string name="condition">condition</string>
    <string name="send_data">Send data</string>
    <string name="my_weather_station">My Weather Station</string>
    <string name="last">last</string>
</resources>
