<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context=".view.fragments.CurrentWeatherFragment">


    <LinearLayout
        android:id="@+id/llCurrent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/paddingLinear">

            <EditText
                android:id="@+id/etCityName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/city_name"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnGet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTempreture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tempreture"
            android:textSize="26sp"
            android:padding="@dimen/paddingLinear"/>

        <TextView
            android:id="@+id/tvPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pressure"
            android:textSize="26sp"
            android:padding="@dimen/paddingLinear"/>

        <TextView
            android:id="@+id/tvHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/humidity"
            android:textSize="26sp"
            android:padding="@dimen/paddingLinear"/>

        <TextView
            android:id="@+id/tvClouds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/clounds"
            android:textSize="26sp"
            android:padding="@dimen/paddingLinear"/>

        <TextView
            android:id="@+id/tvUpdateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update_time"
            android:textSize="26sp"
            android:padding="@dimen/paddingLinear"/>

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            android:padding="@dimen/paddingLinear"/>

        <TextView
            android:id="@+id/tvSunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sunset"
            android:textSize="26sp"
            android:padding="@dimen/paddingLinear"/>

        <TextView
            android:id="@id/tvSunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sunrise"
            android:textSize="26sp" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>